# RC2026_RoboticArmUpper

./: .clang-format  .gitignore  Joint_space_test.cpp  README.md  error  robotic_armrobotic_arm_base_linklink6_5000_1.000000_1.000000.ikcache  test_10086.txt  健壮的笛卡尔路径规划函数.cpp
src/: README.md
src/arm_client_pkg/: CMakeLists.txt  package.xml
src/arm_client_pkg/include/: point_client.hpp
src/arm_client_pkg/src/: classes.txt  inference.cpp  point_client.cpp
src/control_pack/: CMakeLists.txt  Knowledge.md  mixcontroller_plugin.xml  package.xml  plugin.xml
src/control_pack/include/control_pack/: mixcontroller.hpp
src/control_pack/src/: mixcontroller.cpp  mycontrol.cpp
src/my_controller/: CMakeLists.txt  package.xml
src/my_controller/include/my_controller/: effort_calc_node.hpp
src/my_controller/src/: effort_calc_node.cpp  main.cpp
src/robot_driver/: CMakeLists.txt  package.xml
src/robot_driver/include/robot_driver/: data_pack.h  serialnode.hpp
src/robot_driver/src/: cdc_trans.cpp  main.cpp  serialnode.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: Catch.action  catch.action
src/robot_interfaces/msg/: Arm.msg
src/robotic_1/: CMakeLists.txt  package.xml
src/robotic_1/src/: main.cpp
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/robotic_arm/urdf/: robotic_arm.csv  robotic_arm.urdf
src/robotic_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robotic_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  readme.md  robotic_arm.ros2_control.xacro  robotic_arm.srdf  ros2_controllers.yaml
src/robotic_config/config/.ipynb_checkpoints/: robotic_arm.ros2_control-checkpoint.xacro
src/robotic_config/launch/: bringup.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robotic_task/: CMakeLists.txt  package.xml
src/robotic_task/include/robotic_task/: GraspOrientionController.hpp  SegmentedVelocityController.hpp  TragectorySmoother.hpp  arm_handle_node.hpp  effort_calc_node.hpp
src/robotic_task/src/: arm_handle_node.cpp  effort_calc_node.cpp  main.cpp  test.cpp
vision_search/src/vision_search/: CMakeLists.txt  package.xml
vision_search/src/vision_search/include/: inference.h
vision_search/src/vision_search/src/: point_client.cpp  point_server.cpp
vision_search/src/vision_search/srv/: SetPoint.srv
