<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_client_pkg</name>
  <version>0.0.1</version>
  <description>Action client package for controlling robotic arm using RealSense + YOLO detection.</description>
  <maintainer email="2903382995@qq.com">lzy</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- System / external libraries -->
  <exec_depend>opencv</exec_depend>
  <exec_depend>realsense2</exec_depend>

  <!-- Lint / testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
