<?xml version="1.0"?>
<package format="3">
  <name>vision_search</name>
  <version>0.0.1</version>
  <description>Package for sending coordinates using ROS 2 services</description>
  <maintainer email="you@example.com">lzy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
